--- a/apps/default/home/templates/home/js/publisher-box.html
+++ b/apps/default/home/templates/home/js/publisher-box.html
@@ -88,7 +88,7 @@
         <div class="user-heading">
             <img src="{{ME avatar}}" width="35px" class="img-circle">
             <span>{{ME username}}</span>
-            <span class="pull-right"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><polygon points="16 3 21 8 8 21 3 21 3 16 16 3"></polygon></svg> {{LANG edit_post}}</span>
+            <span class="pull-right"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><polygon points="16 3 21 8 8 21 3 21 3 16 16 3"></polygon></svg> Editar post</span>
         </div>
         <form class="form" id="edit-post-caption" action="{{CONFIG site_url}}/aj/posts/update" autocomplete="true">
             <div class="form-group">
