--- a/apps/default/main/templates/includes/lightbox.html
+++ b/apps/default/main/templates/includes/lightbox.html
@@ -231,7 +231,7 @@
 									  		</a>
 									  	</li>
 									  	<li>
-									  		<a href="<?php echo(pid2url($context['post_data']['post_id'])) ?>" target="_blank">{{LANG go2post}}</a>
+									  		<a href="<?php echo(pid2url($context['post_data']['post_id'])) ?>" target="_blank">Ir a la publicación</a>
 									  	</li>
 									</ul>
 								</div>
