--- a/apps/default/main/templates/modals/edit-post.html
+++ b/apps/default/main/templates/modals/edit-post.html
@@ -1,7 +1,7 @@
 <div class="dialog-modal" id="edit-post-modal" style="display: none;">
 	<div class="modal--inner">
 		<div class="modal--header">
-			<h5><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit" color="#4caf50" style="background-color: rgba(76, 175, 80, 0.25)"><polygon points="16 3 21 8 8 21 3 21 3 16 16 3"></polygon></svg> {{LANG edit_post}}</h5>
+			<h5><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit" color="#4caf50" style="background-color: rgba(76, 175, 80, 0.25)"><polygon points="16 3 21 8 8 21 3 21 3 16 16 3"></polygon></svg> Editar post</h5>
 		</div>
 		<form class="form">
 			<div class="modal--body">
