--- a/apps/default/posts/templates/posts/embed_post.html
+++ b/apps/default/posts/templates/posts/embed_post.html
@@ -199,7 +199,7 @@
 										  	<a href="javascript:void(0);">Eliminar Post</a>
 										</li>
 									    <li id="edit-post">
-									    	<a href="javascript:void(0);">{{LANG edit_post}}</a>
+									    	<a href="javascript:void(0);">Editar post</a>
 									    </li>
 									<?php } ?>
 									<?php if ($context['post_data']['is_owner'] == false) { ?>
