--- a/apps/default/posts/templates/posts/view-post.html
+++ b/apps/default/posts/templates/posts/view-post.html
@@ -224,7 +224,7 @@
 										  	<a href="javascript:void(0);">Eliminar Post</a>
 										</li>
 									    <li id="edit-post">
-									    	<a href="javascript:void(0);">{{LANG edit_post}}</a>
+									    	<a href="javascript:void(0);">Editar post</a>
 									    </li>
 									    <?php if ($context['post_data']['user_data']['is_pro']) { ?>
 								    		<?php if ($context['post_data']['boosted'] == 0) { ?>
