--- a/apps/default/profile/templates/profile/js/script.html
+++ b/apps/default/profile/templates/profile/js/script.html
@@ -22,7 +22,7 @@
 						class:'report-profile',
 						onclick:"report_profile('<?php echo($context['user_data']['user_id']) ?>',-1);"
 					}).append($("<a>",{
-						text:'{{LANG cancel_report}}'
+						text:'Cancelar informe'
 					})));
 				}
 
