--- a/apps/default/signup/templates/signup/index.html
+++ b/apps/default/signup/templates/signup/index.html
@@ -8,10 +8,10 @@
 							<img src="{{CONFIG site_url}}/media/img/user-m.png" class="male_ava" alt="user">
 							<img src="{{CONFIG site_url}}/media/img/user-f.png" class="female_ava" alt="user">
 						</span>
-						<h3 class="animated fadeInUpBig">p</h3>
-						<h4 class="animated fadeInUpBig">{{LANG create_acc_proceed}} {{CONFIG site_name}}</h4>
-						<p class="animated fadeInUpBig">{{LANG min_to_get_start}}</p>
-						<span class="fluid copyright">Copyright &copy; 2018 {{CONFIG site_name}}</span>
+						<h3 class="animated fadeInUpBig">Preparemos tu cuenta</h3>
+						<h4 class="animated fadeInUpBig">Introduce los datos requeridos {{CONFIG site_name}}</h4>
+						<p class="animated fadeInUpBig">En un par de minutos tu cuenta estara lista</p>
+						<span class="fluid copyright">Copyright &copy; 2021 Feria Univalle</span>
 					</div>
 				</div>
 			</div>
@@ -19,7 +19,7 @@
 			<div class="col-sm-2 col-md-3"></div>
 			<div class="col-sm-8 col-md-6 pp_welcome_sign pp_welcome_signup">
 				<div class="logo">
-					<a class="btn btn-link btn_login_back pull-right" href="{{CONFIG site_url}}/welcome"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg> {{LANG sign_in}}</a> 
+					<a class="btn btn-link btn_login_back pull-right" href="{{CONFIG site_url}}/welcome"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>Iniciar sesión</a> 
 					<div>
 						<a href="{{CONFIG site_url}}"><img src="{{CONFIG site_url}}/media/img/logo.{{CONFIG logo_extension}}" width="42px" alt="logo"></a>
 					</div>
@@ -46,7 +46,7 @@
 
 					<div class="pp_mat_input">
 						<input required="true" class="form-control show_password" type="password" name="conf_password" id="conf_password" placeholder="Confirmar contraseña" />
-						<label for="conf_password">Confirma contraseña</label>
+						<label for="conf_password">Confirma tu contraseña</label>
 						<span class="bar"></span>
 						<div class="icon-wrapper">
 							<span toggle=".show_password" class="field-icon toggle-password">
