--- a/apps/default/home/templates/home/includes/post-playtube.html
+++ b/apps/default/home/templates/home/includes/post-playtube.html
@@ -19,7 +19,7 @@
 				  		<a href="javascript:void(0);">Eliminar Post</a>
 				  	</li>
 			    	<li onclick="edit_post(<?php echo $post_data['post_id']; ?>);">
-			    		<a href="javascript:void(0);">{{LANG edit_post}}</a>
+			    		<a href="javascript:void(0);">Editar post</a>
 			    	</li>
 			    	<?php if ($post_data['user_data']['is_pro']) { ?>
 			    		<?php if ($post_data['boosted'] == 0) { ?>
@@ -36,9 +36,9 @@
 					<li onclick="report_post(<?php echo $post_data['post_id']; ?>,this);">
 				  		<a href="javascript:void(0);">
 				  			<?php if ($post_data['reported']) { ?>
-				  				{{LANG cancel_report}}
+				  				Cancelar informe
 				  			<?php } else{ ?>
-				  				{{LANG report_post}}
+				  				Reportar esta publicación
 					  		<?php } ?>
 				  		</a>
 				  	</li>
@@ -49,7 +49,7 @@
 			  		</a>
 			  	</li>
 			    <li>
-			  		<a href="<?php echo(pid2url($post_data['post_id'])) ?>" target="_blank">{{LANG go2post}}</a>
+			  		<a href="<?php echo(pid2url($post_data['post_id'])) ?>" target="_blank">Ir a la publicación</a>
 			  	</li>
 			</ul>
 		</div>
